--- a/views/menu_principal.ejs
+++ b/views/menu_principal.ejs
@@ -76,7 +76,7 @@
                 </div>
                 <div class="row">
                     <div class="col s12">
-                        <h5 class="card-title blue-text control">Bienvenido Leyton Tarqui Huanca</h5>
+                        <h5 class="card-title blue-text control">Bienvenido al sistema Biblioteca</h5>
                     </div>
                 </div>
                 
