--- a/views/menu_principal.ejs
+++ b/views/menu_principal.ejs
@@ -49,15 +49,59 @@
                     </span>
                     <span class="title">Prestamos</span>
 
-                </a></li>
+					</a>
+				</li>
                 
-                <li><a href="">
+				
+				
+                <li class="submenu" id="submenu">
+                    <a href="#">
+                        <span class="icon">
+                            <i class="fas fa-book" aria-hidden="true"></i>
+                        </span>
+                        <span class="title">Reportes</span>
+                        <span class="caret fas fa-angle-down"> </span>
+                    </a>
+                    <ul class="children">
+                        <li>
+                            <a href="../reportes/reporte_ranking">
+                            <span class="icon">
+                                <i class="fas fa-swatchbook" aria-hidden="true"></i>
+                            </span>Generar Ranking</a>
+                        </li> 
+                        <li>
+                            <a href="../reportes/reportes_carnets">
+                            <span class="icon">
+                                <i class="fas fa-swatchbook" aria-hidden="true"></i>
+                            </span>Reporte de Carnets</a>
+                        </li>
+                        <li>
+                            <a href="../reportes/reportes">
+                            <span class="icon">
+                                <i class="fas fa-swatchbook" aria-hidden="true"></i>
+                            </span>Reporte de Material</a>
+                        </li>
+                        <li>
+                            <a href="../reportes/reportes">
+                            <span class="icon">
+                                <i class="fas fa-swatchbook" aria-hidden="true"></i>
+                            </span>Reporte de prestamo</a>
+                        </li>                   
+                    </ul>
+                </li>
+
+
+                <li><a href="../sistema_biblioteca/frmcarnet">
                     <span class="icon">
-                        <i class="as fas fa-file-alt" aria-hidden="true"></i>
+                        <i class="fa fa-address-card" aria-hidden="true"></i>
                     </span>
-                    <span class="title">Reportes</span>
+                    <span class="title">Generar Carnet</span>
 
                 </a></li>
+				
+				
+				
+				
                 <li><a href="">
                     <span class="icon">
                         <i class="as fas fa-user-tie" aria-hidden="true"></i>
@@ -65,6 +109,8 @@
                     <span class="title">Administracion</span>
 
                 </a></li>
+						
+				
             </ul>
         </div>
         <div class="main_container">
@@ -76,7 +122,7 @@
                 </div>
                 <div class="row">
                     <div class="col s12">
-                        <h5 class="card-title blue-text control">Bienvenido al sistema Biblioteca</h5>
+                        <h5 class="card-title blue-text control">Bienvenido al sistema</h5>
                     </div>
                 </div>
                 
